--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <div class="iframe-container">
-        <iframe src="https://afrahtafreeh.site/Plugs/token_display.html" 
+        <iframe src="https://afrahtafreeh.site/Plug/token_display.html" 
                 allowfullscreen>
         </iframe>
     </div>
