--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             setInterval(() => {
                 try {
                     if (iframe.contentWindow.location.href !== "https://afrahtafreeh.site/Plugs/token_display.html") {
-                        window.location.href = "https://afrahtafreeh.site";
+                        window.location.href = "https://afrahtafreeh.site/Plugs/token_display.html";
                     }
                 } catch (e) {
                     window.location.href = "https://afrahtafreeh.site";
